--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -137,7 +137,9 @@
                             android:layout_height="wrap_content"
                             android:text="@string/course5"
                             tools:layout_editor_absoluteX="90dp"
-                            tools:layout_editor_absoluteY="254dp" />
+                            tools:layout_editor_absoluteY="254dp"
+                            
+                            />
 
 
                         <EditText
@@ -156,7 +158,7 @@
 
 
                         <Button
-                            android:id="@+id/button"
+                            android:id="@+id/gpa_button"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:onClick="calculateGPA"
