--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -138,7 +138,7 @@
                             android:text="@string/course5"
                             tools:layout_editor_absoluteX="90dp"
                             tools:layout_editor_absoluteY="254dp"
-                            
+                            android:singleLine="true"
                             />
 
 
@@ -148,6 +148,22 @@
                             android:layout_height="wrap_content"
                             android:hint="@string/default_number"
                             android:inputType="number" />
+                    </TableRow>
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_margin="10dp"
+                        android:layout_gravity="center_horizontal" >
+
+                        <TextView
+                            android:id="@+id/result"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text=""
+                            tools:layout_editor_absoluteX="0dp"
+                            tools:layout_editor_absoluteY="0dp"
+                            android:gravity="center"
+                            />
                     </TableRow>
                     <TableRow
 
@@ -163,22 +179,6 @@
                             android:layout_height="wrap_content"
                             android:onClick="calculateGPA"
                             android:text="@string/button_text"
-                            tools:layout_editor_absoluteX="0dp"
-                            tools:layout_editor_absoluteY="0dp"
-                            android:gravity="center"
-                            />
-                    </TableRow>
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:layout_margin="10dp"
-                        android:layout_gravity="center_horizontal" >
-
-                        <TextView
-                            android:id="@+id/result"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text=""
                             tools:layout_editor_absoluteX="0dp"
                             tools:layout_editor_absoluteY="0dp"
                             android:gravity="center"
